# ads-project

./: .env.example  .gitignore  Contest.md  Makefile  README.md
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  tgads_backend.session
backend/alembic/: env.py
backend/alembic/versions/: 5b5a1cfb9f01_create_campaign_requests.py  67116531bdd4_create_channels.py  8a7d3f1c2b4e_create_campaign_applications.py  9c2b06f1d0d7_create_users_table.py  a6c3e5f7b8d9_add_users_preferred_role.py  a9d4b7c2e1f0_add_campaign_application_terms_and_relax_deal_terms.py  b1d7e3a4c9f0_create_wallet_proof_challenges.py  b3c7e1f2a9d8_create_deals.py  c4a8f1d9e7b2_create_deal_message_selections.py  c6e4f9a1b2d3_normalize_channel_chat_ids_and_merge_heads.py  c8f1d2a3b4c5_add_structured_listing_formats.py  d2f1a3c4b5e6_add_deal_posting_and_payout_fields.py  d4c9f54a8b7d_create_channel_stats_snapshots.py  e3b7f5a2c1d9_add_escrow_address_metadata_and_tx_seen_uniqueness.py  e7a3c2d9f0b1_create_listings.py  f1a9c3d4e5b6_add_campaign_lifecycle_and_multi_acceptance.py  f6a2d8c1b3e4_create_deal_escrows.py
backend/app/: logging.py  main.py  settings.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  campaign_applications.py  campaigns.py  channel_managers.py  channels.py  deals.py  health.py  listings.py  marketplace.py  users.py
backend/app/auth/: telegram_initdata.py
backend/app/domain/: __init__.py  channel_verification.py  escrow_fsm.py  permissions.py
backend/app/models/: __init__.py  campaign_application.py  campaign_request.py  channel.py  channel_member.py  channel_stats_snapshot.py  deal.py  deal_escrow.py  deal_event.py  escrow_event.py  listing.py  listing_format.py  wallet_proof_challenge.py
backend/app/repositories/: __init__.py  marketplace_repo.py
backend/app/schemas/: __init__.py  campaigns.py  channel.py  channel_manager.py  channel_stats.py  deals.py  escrow.py  listing.py  marketplace.py  users.py
backend/app/services/: bot_notifications.py  channel_stats.py  channel_verify.py  deal_fsm.py  deal_posting.py  manager_revalidate.py
backend/app/services/telegram/: message_inspect.py
backend/app/services/ton/: __init__.py  addressing.py  chain_scan.py  errors.py  payouts.py  toncenter_url.py  tonconnect.py  transfers.py  utils.py  wallet_proof.py  wallets.py
backend/app/telegram/: __init__.py  bootstrap.py  permissions.py
backend/app/worker/: celery_app.py  deal_posting.py  deal_verification.py  ton_watch.py
backend/tests/: __init__.py  conftest.py  test_auth_me.py  test_campaigns.py  test_channel_managers.py  test_channel_stats.py  test_channel_verify.py  test_channels.py  test_cors.py  test_db.py  test_deal_fsm.py  test_deal_posting.py  test_deal_verification.py  test_deals.py  test_escrow_api.py  test_escrow_fsm.py  test_health.py  test_listings.py  test_logging.py  test_manager_revalidate.py  test_marketplace.py  test_marketplace_params.py  test_marketplace_repo.py  test_settings.py  test_telegram_initdata.py  test_ton_addresses.py  test_ton_chain_scan.py  test_ton_payouts.py  test_ton_transfers.py  test_ton_watch.py  test_toncenter_url.py  test_tonconnect.py  test_user_preferences.py  test_user_schema.py  test_user_wallet.py  test_wallet_proof.py
backend/tests/telegram/: test_bootstrap.py  test_bot_api.py  test_permissions.py  test_telethon_client.py
bot/: Dockerfile  pyproject.toml
bot/app/: __init__.py  bot_api.py  db.py  deal_messaging.py  main.py  settings.py
bot/tests/: test_bot_api.py  test_deal_messaging.py  test_settings.py  test_shared_import.py
bot/tests/telegram/: test_wrappers.py
frontend/: Dockerfile  eslint.config.cjs  index.html  package-lock.json  package.json  (+4 more)
(+330 files in other folders)
