[tool.poetry]
name = "ads-backend"
version = "0.1.0"
description = "Backend service scaffold"
authors = ["Telegram Ads Marketplace"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
celery = "^5.4.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
