[project]
name = "ads-backend"
version = "0.1.0"
description = "Backend service scaffold"
authors = [{ name = "Telegram Ads Marketplace" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.28.1",
    "telethon>=1.35.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.19",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
