[project]
name = "ads-bot"
version = "0.1.0"
description = "Bot service scaffold"
authors = [{ name = "Telegram Ads Marketplace" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
